# BlokchainSim

./: .dockerignore  Dockerfile  README.md
.github/workflows/: ci.yml
BlokchainSim/: .gitignore  CMakeLists.txt  CMakePresets.json
BlokchainSim/BlokchainSim/: CMakeLists.txt  main.cpp
BlokchainSim/BlokchainSim/Block/: Block.cpp  Block.h
BlokchainSim/BlokchainSim/Blockchain/: Blockchain.cpp  Blockchain.h  ChainStats.h  FileManager.h  Transaction.h  concepts.hpp
BlokchainSim/BlokchainSim/Node/: FullNode.h  MinerNode.h  Node.h
BlokchainSim/BlokchainSim/UI/: mainwindow.cpp  mainwindow.h
BlokchainSim/BlokchainSim/tests/: test_block.cpp  test_blockchain.cpp  test_chain_validation.cpp  test_filemanager.cpp  test_main.cpp  test_pow.cpp  test_transaction.cpp
